--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: nanop
 Type: Package
 Title: tools for nanoparticle simulation and PDF calculation
-Version: 1.0
+Version: 1.0-1
 Author: Katharine Mullen
 Maintainer: Katharine Mullen <katharine.mullen@nist.gov>
 Description: This software package implements functions to simulate
@@ -10,6 +10,6 @@ Description: This software package implements functions to simulate
         total scattering structure functions.
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: 2009-12-06 00:52:56 UTC; kmullen
+Packaged: 2010-05-05 17:58:36 UTC; kmullen
 Repository: CRAN
-Date/Publication: 2009-12-06 10:08:39
+Date/Publication: 2010-05-06 05:40:19
