--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,17 @@
 Package: nanop
 Type: Package
-Title: tools for nanoparticle simulation and PDF calculation
-Version: 1.0-1
-Author: Katharine Mullen
-Maintainer: Katharine Mullen <katharine.mullen@nist.gov>
-Description: This software package implements functions to simulate
-        spherical monoatomic nanoparticles with face-centered cubic
-        structure and calculate the associated pair distribution and
-        total scattering structure functions.
+Date: 2013-08-19
+Title: Tools for Nanoparticle Simulation and Calculation of PDF and
+        Total Scattering Structure Function
+Version: 2.0-1
+Author: Anton Gagin, Katharine Mullen 
+Maintainer: Anton Gagin <anton.gagin@nist.gov>
+Imports: distrEx, geometry, rgl
+Suggests: DEoptim, mco
+Description: This software package implements functions to simulate spherical, ellipsoid and cubic polyatomic nanoparticles with arbitrary crystal structure and calculate the associated pair distribution and total scattering structure functions. 
 License: GPL (>= 2)
-LazyLoad: yes
-Packaged: 2010-05-05 17:58:36 UTC; kmullen
+LazyData: yes
+Packaged: 2013-08-20 16:30:41 UTC; ang2
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2010-05-06 05:40:19
+Date/Publication: 2013-08-20 19:15:14
