--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,4 @@ export(calcPDF, calcTotalScatt, calcQDepPDF,
 	   termRip, gaussConvol, IqSAS, IqSASP, 
 	   GrSAS, GrSASCS, plotPart, getSymEl,
 	   getScatterFactor, getScatterLength,
-	   createAtom, getBase)
+	   createAtom, getBase, scatterFactor)
