--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,15 +2,16 @@ Package: nanop
 Type: Package
 Title: Tools for Nanoparticle Simulation and Calculation of PDF and
         Total Scattering Structure Function
-Version: 2.0-2
+Version: 2.0-3
 Author: Anton Gagin, Katharine Mullen 
 Maintainer: Anton Gagin <anton.gagin@nist.gov>
-Imports: distrEx, geometry, rgl
+Imports: distrEx, rgl
 Suggests: DEoptim, mco
-Description: This software package implements functions to simulate spherical, ellipsoid and cubic polyatomic nanoparticles with arbitrary crystal structure and calculate the associated pair distribution and total scattering structure functions. 
+Description: This software package implements functions to simulate spherical, ellipsoid and cubic polyatomic nanoparticles with arbitrary crystal structures and to calculate the associated pair-distribution function and X-ray/neutron total-scattering signals. It also provides a target function that can be used for simultaneous fitting of small- and wide-angle total scattering data in real and reciprocal spaces. The target function can be generated either as a sum of weighted residuals for individual datasets or as a vector of residuals suitable for optimization using multi-criteria algorithms (e.g. Pareto methods).
+URL: http://journals.iucr.org/j/issues/2014/02/00/to5066/to5066.pdf
 License: GPL (>= 2)
 LazyData: yes
-Packaged: 2013-10-17 15:28:59 UTC; ang2
+Packaged: 2014-05-23 15:02:31 UTC; ang2
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-10-25 10:46:31
+Date/Publication: 2014-05-23 18:33:26
