--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,15 +2,15 @@ Package: nanop
 Type: Package
 Title: Tools for Nanoparticle Simulation and Calculation of PDF and
         Total Scattering Structure Function
-Version: 2.0-4
+Version: 2.0-5
 Author: Anton Gagin, Katharine Mullen, Igor Levin 
 Maintainer: Anton Gagin <anton.gagin@nist.gov>
 Imports: distrEx, rgl
 Suggests: DEoptim, mco
 Description: This software package implements functions to simulate spherical, ellipsoid and cubic polyatomic nanoparticles with arbitrary crystal structures and to calculate the associated pair-distribution function and X-ray/neutron total-scattering signals. It also provides a target function that can be used for simultaneous fitting of small- and wide-angle total scattering data in real and reciprocal spaces. The target function can be generated either as a sum of weighted residuals for individual datasets or as a vector of residuals suitable for optimization using multi-criteria algorithms (e.g. Pareto methods).
-URL: http://journals.iucr.org/j/issues/2014/02/00/to5066
+URL: http://scripts.iucr.org/cgi-bin/paper?S1600576714001046
 License: GPL (>= 2)
-Packaged: 2014-08-25 16:16:04 UTC; ang2
+Packaged: 2015-04-07 17:03:32 UTC; ang2
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-08-25 22:30:42
+Date/Publication: 2015-04-08 00:54:04
